Security: Added http auth login

--- a/src/conf/modules.conf
+++ b/src/conf/modules.conf
@@ -19,4 +19,4 @@
     # AllowedUsers:
     # -------------
     # When Access is set to list, this lists users that have access to this module.
-    AllowedUsers domen
+    AllowedUsers admin
