Config: Added global configuration options and implemented them.
In global configuration:
 session cookie expires setting
 default allow option for modules
 default allowed users option for modules

Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/conf/modules.conf
+++ b/src/conf/modules.conf
@@ -5,18 +5,22 @@
 [test]
     # Disabled:
     # ---------
-    # With this option you can disable the module. (on means disabled, off is enabled (default))
+    # With this option you can disable the module.
+    #  on  - module disabled
+    #  off - module is enabled (default)
     Disabled off
     
     # Access:
     # -------
     # With this option select who has access to this module.
     #  guests - allow access to everyone
-    #  users  - allow access to users with username and password (default)
+    #  users  - allow access to users with username and password
     #  list   - allow only users listed bellow
-    Access list
+    # This option overrides the DefaultAccess setting.
+    #Access list
     
     # AllowedUsers:
     # -------------
-    # When Access is set to list, this lists users that have access to this module.
-    AllowedUsers admin
+    # List of users that have access, when access is set to list.
+    # This option overrides the DefaultAllowedUsers setting.
+    #AllowedUsers admin
