--- a/src/conf/rpi.conf
+++ b/src/conf/rpi.conf
@@ -23,4 +23,4 @@
     # --------------------
     # List of users that have access, when access is set to list.
     # Can be overriden for specific module in modules.conf
-    #DefaultAllowedUsers admin
+    DefaultAllowedUsers admin
