--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -5,4 +5,5 @@ INCDIR  = -I./include
 LDFLAGS =
 DEFS    =
 OBJECTS = rpi_main.o rpi_modules.o rpi_security.o rpi_config.o \
-          rpi_memory.o rpi_cpu.o rpi_network.o rpi_storage.o
+          rpi_memory.o rpi_cpu.o rpi_network.o rpi_storage.o \
+          rpi_string.o
