General: Moved uptime to general and added board-rev.
Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -7,4 +7,5 @@ DEFS    =
 OBJECTS = rpi_main.o rpi_modules.o rpi_security.o rpi_config.o \
           rpi_memory.o rpi_cpu.o rpi_network.o rpi_storage.o \
           rpi_string.o rpi_logger.o \
-	  rpi_gpio.o rpi_i2c.o rpi_spi.o rpi_serial.o rpi_shift.o
+	  rpi_gpio.o rpi_i2c.o rpi_spi.o rpi_serial.o rpi_shift.o \
+	  rpi_general.o
