Implemented separate write permission in backend.
Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/conf/modules.conf
+++ b/src/conf/modules.conf
@@ -2,7 +2,7 @@
 # ===================================================
 # Configure each module in its own section
 
-[test]
+[example]
     # Disabled:
     # ---------
     # With this option you can disable the module.
@@ -15,7 +15,7 @@
     # With this option select who has access to this module.
     #  guests - allow access to everyone
     #  users  - allow access to users with username and password
-    #  list   - allow only users listed bellow
+    #  list   - allow only users in AllowedUsers
     # This option overrides the DefaultAccess setting.
     #Access list
     
@@ -24,3 +24,18 @@
     # List of users that have access, when access is set to list.
     # This option overrides the DefaultAllowedUsers setting.
     #AllowedUsers admin
+
+    # WriteAccess:
+    # ------------
+    # With this option select who has write access to this module.
+    #  guests - allow access to everyone
+    #  users  - allow access to users with username and password
+    #  list   - allow only users in AllowedWriteUsers
+    # This option overrides the DefaultWriteAccess setting.
+    #WriteAccess list
+    
+    # AllowedWriteUsers
+    # -----------------
+    # List of users that have write access, when write access is set to
+    # list. This option overrides the DefaultAllowedWriteUsers setting.
+    #AllowedWriteUsers admin
