--- a/src/conf/rpi.conf
+++ b/src/conf/rpi.conf
@@ -8,7 +8,7 @@
     # Sets who has access to modules.
     #  guests - allow access to everyone
     #  users  - allow access to users with username and password
-    #  list   - allow only users listed bellow
+    #  list   - allow only users in AllowedUsers
     # Default is users.
     # Can be overriden for specific module in modules.conf
     DefaultAccess users
@@ -18,3 +18,19 @@
     # List of users that have access, when access is set to list.
     # Can be overriden for specific module in modules.conf
     DefaultAllowedUsers admin
+    
+    # DefaultWriteAccess:
+    # -------------------
+    # Sets who has write access to modules.
+    #  guests - allow write access to everyone
+    #  users  - allow write access to users with username and password
+    #  list   - allow only users in AllowedWriteUsers
+    # Default is users.
+    # Can be overriden for specific module in modules.conf
+    DefaultWriteAccess users
+
+    # DefaultAllowedWriteUsers:
+    # --------------------
+    # List of users that have write access, when write access is set to list.
+    # Can be overriden for specific module in modules.conf
+    DefaultAllowedWriteUsers admin
