Settings: Added settings module.
Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/conf/modules.conf
+++ b/src/conf/modules.conf
@@ -2,7 +2,12 @@
 # ===================================================
 # Configure each module in its own section
 
-[example]
+# Allow write access to settings only to admin
+[settings]
+    WriteAccess list
+    AllowedWriteUsers admin
+
+#[example]
     # Disabled:
     # ---------
     # With this option you can disable the module.
