--- a/src/html/js/angular-dashboard/Makefile
+++ b/src/html/js/angular-dashboard/Makefile
@@ -6,10 +6,14 @@ FILES=dashboard.js history.js login.js navigation.js main.js cpu.js \
 
 all: angular-dashboard.min.js
 
+clean:
+	rm *.min.js
+
 angular-dashboard.min.js: $(FILES:.js=.min.js)
 	cat $(FILES:.js=.min.js) > $@
 	cp $@ ../$@
 
 %.min.js: %.js
 	yui-compressor --type js --charset utf-8 $< -o $@
+	echo "" >> $@
 	
