Dashboard: Added custom jquery-ui.min.js, that only supports sortable.
This is a major improvement for load time on mobiles.

Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/html/js/Makefile
+++ b/src/html/js/Makefile
@@ -1,7 +1,9 @@
+JAVA_CMD=java
+
 SUBDIRS=jquery-rpijs angular-dashboard
 
-FILES=jquery-rpijs.min.js jquery.ui.touch-punch.min.js \
-	ng-google-chart.js angular-dashboard.min.js
+FILES=jquery-ui.min.js jquery.ui.touch-punch.min.js jquery-rpijs.min.js \
+	ng-google-chart.min.js angular-dashboard.min.js
 
 .PHONY=subdirs
 
@@ -9,13 +11,17 @@ all: subdirs javascript.js
 
 javascript.js: $(FILES)
 	cat $(FILES) > javascript.js
-
+	
+%.min.js: %.js
+	yui-compressor --type js --charset utf-8 $< -o $@
+	echo "" >> $@
+	
 clean:
 	for dir in $(SUBDIRS); do \
-	  cd $$dir; $(MAKE) $(MAKEFLAGS) clean; cd ..; \
+		cd $$dir; $(MAKE) $(MAKEFLAGS) clean; cd ..; \
 	done
 
 subdirs:
 	for dir in $(SUBDIRS); do \
-	  cd $$dir; $(MAKE) $(MAKEFLAGS); cd ..; \
+		cd $$dir; $(MAKE) $(MAKEFLAGS); cd ..; \
 	done
