Logger: values can be separated by ~ (safe url character).
Monkey server cannot handle %7c value for |.
And ipad browser decided to start encoding it as %7c,
so I had to change it.
Old version is still supported but not recommended.

Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/html/css/Makefile
+++ b/src/html/css/Makefile
@@ -1,6 +1,11 @@
+export JAVA_CMD=java
+
 FILES=login.css general.css
 
 all: style.css
+
+clean:
+	rm parts/*.min.css
 
 style.css: $(FILES:%.css=parts/%.min.css)
 	cat $(FILES:%.css=parts/%.min.css) > style.css
